user, home activity, login activity, main activity, search product java changes and xml file changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="changeprofile">Change Profile</string>
     <string name="update">Update</string>
     <string name="close">Close</string>
+    <string name="cntnumber">Contact Number...</string>
 
 
 </resources>
