changes in string admin new orders

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="addnewprduct">Add New Product</string>
     <string name="checkneworders">Check New Orders</string>
     <string name="logoutbtn">Logout</string>
+    <string name="neworderheading">New Orders</string>
 
 
 </resources>
