--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="checkneworders">Check New Orders</string>
     <string name="logoutbtn">Logout</string>
     <string name="neworderheading">New Orders</string>
+    <string name="productheading">Products</string>
 
 
 </resources>
