changes in string cart next btn

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,7 @@
     <string name="neworderheading">New Orders</string>
     <string name="productheading">Products</string>
     <string name="totalprice">Total Price</string>
+    <string name="nextbtn">Next</string>
 
 
 </resources>
