changes in string confirmfinalorder xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,11 @@
     <string name="productheading">Products</string>
     <string name="totalprice">Total Price</string>
     <string name="nextbtn">Next</string>
+    <string name="enteryourname">Your Name</string>
+    <string name="enteryourphonenumber">Your Phone Number</string>
+    <string name="enterhomeaddress">Your Home Address</string>
+    <string name="enteryourcity">Your City Name</string>
+    <string name="confirmtheshippment">Confirm</string>
 
 
 </resources>
