--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,8 @@
     <string name="enterthephonenumber">Phone Number</string>
     <string name="inputnewpassword">Password</string>
     <string name="createaccountbtn">Create Account</string>
+    <string name="typeproductname">Product Name</string>
+    <string name="searchbtn">Search</string>
 
 
 </resources>
