--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,10 @@
     <string name="createaccountbtn">Create Account</string>
     <string name="typeproductname">Product Name</string>
     <string name="searchbtn">Search</string>
+    <string name="closebtn">Close</string>
+    <string name="updateyourprofile">Update</string>
+    <string name="enterphone">Phone Number...</string>
+    <string name="enteraddress">Address...</string>
 
 
 </resources>
