changes in string header_home.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,7 @@
     <string name="updateyourprofile">Update</string>
     <string name="enterphone">Phone Number...</string>
     <string name="enteraddress">Address...</string>
+    <string name="username">user name</string>
 
 
 </resources>
