changes in string orders_layout.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,7 @@
     <string name="productname">Product Name</string>
     <string name="productprice">Product Price</string>
     <string name="productdescription">Product Description</string>
+    <string name="showneworders">Show User Order Product</string>
 
 
 </resources>
